@@ -31,6 +31,10 @@ AC_CONFIG_SRCDIR([providerDrv.c])
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER([config.h])
 
+#Source files will use the local sfcCommon files if this is set.
+#Reverse this to use the shared sfcCommon library.
+AC_DEFINE(SFCCOMMON,1,[Local sfcCommon files used.])
+
 AC_ARG_ENABLE(debug,
 	[AC_HELP_STRING([--disable-debug],
 		[disable debug mode for SFCB.])],
@@ -106,13 +110,6 @@ AC_ARG_ENABLE(uds,
 AC_ARG_ENABLE(request-types,
 	[AC_HELP_STRING([--enable-request-types(=TYPES)],
 		[Enable support of listed request types. If none are listed, all are enabled.])])
-
-AC_ARG_ENABLE(sfcCommon,
-	[AC_HELP_STRING([--disable-sfcCommon],
-		[Disable local sfcCommon libraries and use shared version.])],
-	[enable_sfcCommon=$enableval],
-	[enable_sfcCommon="yes"]
-    )
 
 # Size checks
 AC_CHECK_SIZEOF(void*)
@@ -233,7 +230,6 @@ AM_CONDITIONAL(CMDTEST,[test "$test_cmd" == "yes"])
 AM_CONDITIONAL(SLPTEST,[test "$test_slp" == "yes"])
 AM_CONDITIONAL(PROVTEST,[test "$test_providers" == "yes"])
 AM_CONDITIONAL(PROVTEST,[test "$test_local" == "yes"])
-
 if [test "$enable_tests"]; then
     # The order of TEST_SUBDIRS determines test
     # execution order.
@@ -336,12 +332,6 @@ if test "$handler_CIMRS" == "yes"; then
 fi
 # End of parser config
 
-if test "$enable_sfcCommon" == "yes"; then
-   AC_DEFINE(SFCCOMMON,,[Local sfcCommon enabled])
-else
-   AC_CHECK_LIB(sfcUtil,main,,[AC_MSG_ERROR([Could not find required sfcUtil])])
-fi
-
 if test "$enable_uds" == "yes"; then
    AC_DEFINE(HAVE_UDS,,[UDS authentication enabled])
 fi
@@ -434,7 +424,6 @@ fi
 # Checks for libraries.
 AC_CHECK_LIB(pthread,main)
 AC_CHECK_LIB(dl,main)
-
 AC_CHECK_LIB(z,main,[SFCB_LIBZ=-lz],[AC_MSG_ERROR([Could not find required libz])])
 if test "$enable_indications" = "yes" ; then
    LOAD_INDICATION_PROVIDER=
@@ -546,7 +535,6 @@ AM_CONDITIONAL(DOCS,[test "$enable_docs" == "yes"])
 AM_CONDITIONAL(IPV6,[test "$enable_ipv6" == "yes"])
 AM_CONDITIONAL(LOCAL_CONNECT_NO_INDICATION,[test "$enable_local_connect_only" == "yes" -a "$enable_indications" == "no"])
 AM_CONDITIONAL(LOCAL_CONNECT_ONLY,[test "$enable_local_connect_only" == "yes"])
-AM_CONDITIONAL(SFCCOMMON,[test "$enable_sfcCommon" == "yes"])
 
 AC_CONFIG_FILES([Makefile sfcb.spec sfcbrepos.sh sfcbstage.sh sfcbunstage.sh 
 	         sfcbuuid.sh sfcb.cfg.pre getSchema.sh.pre 
@@ -574,7 +562,6 @@ echo -e "uds"\\t\\t\\t\\t"${enable_uds:-no}"
 echo -e "tests"\\t\\t\\t\\t"${enable_tests:-no}"
 echo -e "debug"\\t\\t\\t\\t"${enable_debug:-no}"
 echo -e "Request types"\\t\\t\\t"${enable_request_types}"
-echo -e "Local sfcCommon"\\t\\t\\t"${enable_sfcCommon}"
 echo =================================================================
 echo
 echo "sfcb configuration complete.  you may now run 'make'"
