@@ -4,7 +4,6 @@ Changes in 1.4.1
 New features:
 - 3152523 Changes for footprinting in ABT 
 - 1596336 Add config option for network interface binding
-- 3177587 create sfcCommon library
 
 Bugs fixed: 
 
